# zprof

./: .gitignore  Cargo.toml  HISTORY_SHARING_FIX.md  IMPLEMENTATION_PLAN.md  Makefile  README.md  REMAINING_WORK_ANALYSIS.md  test_git_implementation.sh  test_history_sharing.sh
docs/: PRD.md  README.md  architecture.md  backlog.md  bmm-workflow-status.md  bmm-workflow-status.yaml  epics.md  product-brief-zprof-2025-10-31.md  sprint-change-proposal-2025-11-21.md  sprint-status.yaml  technical-decisions.md  ux-design-specification.md
docs/developer/: adding-frameworks.md  adding-plugins-themes.md  architecture.md  contributing.md  technical-decisions.md  testing.md
docs/internal/: sprint-status.yaml
docs/planning/: sprint-status.yaml
docs/sprint-artifacts/: roadmap.md  sprint-status.yaml  tech-spec-epic-3.md  tech-spec-epic-4.md  tech-spec-epic-5.md  tech-spec-epic-6.md
docs/stories/: 1-1-initialize-zprof-directory-structure.context.xml  1-1-initialize-zprof-directory-structure.md  1-10-delete-profile.md  1-11-rollback-to-pre-zprof-state.context.xml  1-11-rollback-to-pre-zprof-state.md  1-1b-framework-detection-and-import-during-init.md  1-1b-migrate-existing-configuration-during-init.context.xml  1-1b-migrate-existing-configuration-during-init.md  1-2-list-available-profiles.md  1-3-display-current-active-profile.md  1-4-framework-detection-for-smart-profile-creation.md  (+19 more)
implementation-notes/: HISTORY_SHARING_FIX.md  PHASE1_IMPLEMENTATION_SUMMARY.md  SHARED_CUSTOMIZATIONS.md
src/: git.rs  lib.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  commands_test.rs  error.rs  lib.rs  main.rs  types.rs
src-tauri/tests/: gui_commands_test.rs
src-ui/: index.html  package-lock.json  package.json  tailwind.config.js
tests/: cli_gui_interop_test.rs  create_preset_test.rs  create_test.rs  current_test.rs  edit_test.rs  export_test.rs  font_detection_test.rs  framework_detection_test.rs  github_import_test.rs  import_test.rs  init_test.rs  list_test.rs  plugin_count_test.rs  plugin_metadata_test.rs  rollback_test.rs  uninstall_edge_cases_test.rs  uninstall_validation_test.rs  use_test.rs
(+289 files in other folders)
