[package]
name = "zprof"
version = "0.1.0"
edition = "2021"

[features]
test-helpers = []

[dependencies]
clap = { version = "4.5.51", features = ["derive"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.9"
dirs = "5.0"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.10"
log = "0.4"
dialoguer = "0.11"
ratatui = "0.29.0"
crossterm = "0.29.0"
indicatif = "0.18"
tar = "0.4"
flate2 = "1.0"
serde_json = "1.0"
git2 = "0.20"

[dev-dependencies]
insta = "1.34"
tempfile = "3.8"
serial_test = "3.0"
