[package]
name = "zprof-tauri"
version = "0.2.0"
description = "zprof GUI application"
authors = ["Anna Barnes"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-shell = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lib]
name = "zprof_tauri"
crate-type = ["lib", "cdylib", "staticlib"]
